--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/small_padding"
-        android:background="@color/grey"
+        android:background="@color/green_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +90,7 @@
         android:layout_height="1dp"
         android:layout_marginStart="@dimen/padding"
         android:layout_marginEnd="@dimen/padding"
-        android:background="@color/grey"
+        android:background="@color/green_200"
         app:layout_constraintBottom_toBottomOf="@+id/login_or"
         app:layout_constraintEnd_toStartOf="@+id/login_or"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +114,7 @@
         android:layout_height="1dp"
         android:layout_marginStart="@dimen/padding"
         android:layout_marginEnd="@dimen/padding"
-        android:background="@color/grey"
+        android:background="@color/green_200"
         app:layout_constraintBottom_toBottomOf="@+id/login_or"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/login_or"
@@ -170,7 +170,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginBottom="@dimen/small_padding"
-        android:background="@color/grey"
+        android:background="@color/green_200"
         app:layout_constraintBottom_toTopOf="@+id/forgot_your_login_credentials"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
