--- a/app/src/main/res/layout/activity_order_map.xml
+++ b/app/src/main/res/layout/activity_order_map.xml
@@ -1,9 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:id="@+id/fragmentOrders"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderMapActivity" />
+    tools:context=".view.OrderMapActivity">
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:context=".view.OrderMapActivity">
+
+    </androidx.fragment.app.FragmentContainerView>
+
+    <View
+        android:id="@+id/maps_top_view"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="@dimen/padding"
+        android:layout_marginTop="@dimen/padding"
+        android:layout_marginEnd="@dimen/padding"
+        android:background="@drawable/rounded_card"
+        android:padding="@dimen/padding"
+        app:layout_constraintEnd_toEndOf="@+id/map"
+        app:layout_constraintStart_toStartOf="@+id/map"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/maps_bottom_view"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="@dimen/padding"
+        android:layout_marginEnd="@dimen/padding"
+        android:layout_marginBottom="@dimen/start_padding"
+        android:background="@drawable/rounded_card"
+        android:padding="@dimen/padding"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
+        app:layout_constraintEnd_toEndOf="@+id/map"
+        app:layout_constraintStart_toStartOf="@+id/map" />
+
+    <TextView
+        android:id="@+id/order_location"
+        style="@style/headline7"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/small_padding"
+        android:layout_marginEnd="@dimen/padding"
+        android:text="Order location"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/maps_top_view"
+        app:layout_constraintEnd_toEndOf="@+id/maps_top_view"
+        app:layout_constraintStart_toEndOf="@+id/map_ic_return"
+        app:layout_constraintTop_toTopOf="@+id/maps_top_view" />
+
+    <ImageView
+        android:id="@+id/map_ic_return"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="@dimen/padding"
+        android:contentDescription="product_back_arrow"
+        android:src="@drawable/ic_arrow_back_outline"
+        app:layout_constraintBottom_toBottomOf="@+id/order_location"
+        app:layout_constraintStart_toStartOf="@+id/maps_top_view"
+        app:layout_constraintTop_toTopOf="@+id/order_location"
+        app:tint="@color/black" />
+
+    <TextView
+        android:id="@+id/map_remaining_time"
+        style="@style/headline1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/padding"
+        android:text="0"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@+id/maps_bottom_view"
+        app:layout_constraintEnd_toEndOf="@+id/order_remaining_time"
+        app:layout_constraintStart_toStartOf="@+id/order_remaining_time"
+        app:layout_constraintTop_toBottomOf="@+id/order_remaining_time" />
+
+    <TextView
+        android:id="@+id/map_remaining_distance"
+        style="@style/headline1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/padding"
+        android:text="0"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@+id/maps_bottom_view"
+        app:layout_constraintEnd_toEndOf="@+id/order_remaining_distance"
+        app:layout_constraintStart_toStartOf="@+id/order_remaining_distance"
+        app:layout_constraintTop_toBottomOf="@+id/order_remaining_distance" />
+
+    <ImageView
+        android:id="@+id/order_ic_remaining_time_circle"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="@dimen/padding"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/maps_bottom_view"
+        app:layout_constraintTop_toTopOf="@+id/maps_bottom_view"
+        app:srcCompat="@drawable/circle"
+        app:tint="@color/green_200" />
+
+    <ImageView
+        android:id="@+id/order_ic_remaining_distance_circle"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="@dimen/padding"
+        app:layout_constraintEnd_toEndOf="@+id/maps_bottom_view"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="@+id/maps_bottom_view"
+        app:srcCompat="@drawable/circle"
+        app:tint="@color/green_200" />
+
+    <ImageView
+        android:id="@+id/order_ic_remaining_time"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/order_ic_remaining_time_circle"
+        app:layout_constraintEnd_toEndOf="@+id/order_ic_remaining_time_circle"
+        app:layout_constraintStart_toStartOf="@+id/order_ic_remaining_time_circle"
+        app:layout_constraintTop_toTopOf="@+id/order_ic_remaining_time_circle"
+        app:srcCompat="@drawable/ic_clock"
+        app:tint="@color/green_600" />
+
+    <ImageView
+        android:id="@+id/order_ic_remaining_distance"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/order_ic_remaining_distance_circle"
+        app:layout_constraintEnd_toEndOf="@+id/order_ic_remaining_distance_circle"
+        app:layout_constraintStart_toStartOf="@+id/order_ic_remaining_distance_circle"
+        app:layout_constraintTop_toTopOf="@+id/order_ic_remaining_distance_circle"
+        app:srcCompat="@drawable/ic_distance"
+        app:tint="@color/green_600" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:id="@+id/order_remaining_time"
+        style="@style/headline3_grey"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/small_padding"
+        android:layout_marginTop="@dimen/small_padding"
+        android:layout_marginEnd="@dimen/small_padding"
+        android:text="Remaining time"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/maps_bottom_view"
+        app:layout_constraintTop_toBottomOf="@+id/order_ic_remaining_time_circle" />
+
+    <TextView
+        android:id="@+id/order_remaining_distance"
+        style="@style/headline3_grey"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/small_padding"
+        android:layout_marginTop="@dimen/small_padding"
+        android:layout_marginEnd="@dimen/small_padding"
+        android:text="Remaining distance"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/maps_bottom_view"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/order_ic_remaining_distance_circle" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
