--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,6 +77,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="@dimen/padding"
         android:background="@drawable/rounded_card"
+        android:enabled="false"
         android:shadowColor="@color/teal_200"
         android:text="@string/log_in"
         android:visibility="visible"
